--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["abcabcbb", "pwke", "pwwkew", "strs", "unshift"]
+  "cSpell.words": ["abcabcbb", "curr", "pwke", "pwwkew", "strs", "unshift"]
 }
