--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-  "cSpell.words": ["abcabcbb", "curr", "hasnext", "indegree", "prereq", "pwke", "pwwkew", "strs", "subarray", "unshift"]
+  "cSpell.words": [
+    "abcabcbb",
+    "cooldown",
+    "curr",
+    "hasnext",
+    "indegree",
+    "prereq",
+    "pwke",
+    "pwwkew",
+    "strs",
+    "subarray",
+    "unshift"
+  ]
 }
