HJ59-找出字符串中第一个只出现一次的字符

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     // "strict": true,
-    "moduleDetection": "force"
+    "moduleDetection": "force",
+    "target": "es2015"
   }
 }
