--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     // "strict": true,
     "moduleDetection": "force",
-    "target": "es2015"
+    "target": "es2015",
+    "lib": ["es2022"]
   }
 }
